--- a/css/build.css
+++ b/css/build.css
@@ -222,6 +222,7 @@ header {
     .content-section .content-container {
       padding-top: 32px;
       padding-bottom: 32px;
+      max-height: calc(100vh - 80px);
       overflow-y: scroll;
       overflow-x: visible; } }
   .content-section .content-container .content {
