--- a/css/build.css
+++ b/css/build.css
@@ -245,6 +245,9 @@ header {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 20px; }
+  @media (max-width: 991px) {
+    .controls-row {
+      margin-bottom: 32px; } }
   .controls-row button {
     margin-right: 12px;
     margin-bottom: 12px; }
@@ -329,7 +332,8 @@ header {
       background-color: rgba(52, 26, 17, 0.12); }
     @media (max-width: 991px) {
       .masters-groups .master-group-item {
-        align-items: center; } }
+        align-items: center;
+        padding: 18px 16px 17px; } }
     .masters-groups .master-group-item:hover {
       background-color: rgba(52, 26, 17, 0.12); }
     .masters-groups .master-group-item .master-group-item__img {
@@ -383,11 +387,15 @@ header {
           width: 497px; } }
       @media (max-width: 991px) {
         .masters-groups .master-group-item .master-group-item__text {
-          margin-bottom: 21px; } }
+          margin-bottom: 16px; } }
       .masters-groups .master-group-item .master-group-item__text h2 {
         line-height: 25px;
         font-size: 18px;
         font-weight: 500; }
+        @media (max-width: 991px) {
+          .masters-groups .master-group-item .master-group-item__text h2 {
+            font-size: 16px;
+            line-height: 22px; } }
       .masters-groups .master-group-item .master-group-item__text p {
         font-style: normal;
         font-weight: normal;
@@ -489,13 +497,17 @@ header {
   transition: all .2s;
   margin-bottom: 18px;
   cursor: pointer; }
+  @media (max-width: 991px) {
+    .homeworks .homework-item {
+      padding: 18px 16px 20px; } }
   .homeworks .homework-item:hover {
     background-color: rgba(52, 26, 17, 0.12); }
   .homeworks .homework-item .homework-item__text {
     margin-right: auto; }
     @media (max-width: 991px) {
       .homeworks .homework-item .homework-item__text {
-        margin-bottom: 22px; } }
+        margin-bottom: 22px;
+        width: 100%; } }
     @media (min-width: 992px) {
       .homeworks .homework-item .homework-item__text {
         width: 497px; } }
@@ -504,6 +516,11 @@ header {
       font-weight: 500;
       margin-bottom: 4px;
       font-size: 18px; }
+      @media (max-width: 991px) {
+        .homeworks .homework-item .homework-item__text h2 {
+          font-size: 16px;
+          margin-bottom: 6px;
+          line-height: 22px; } }
     .homeworks .homework-item .homework-item__text .info {
       font-style: normal;
       font-weight: normal;
@@ -525,7 +542,10 @@ header {
       height: 17px; }
   .homeworks .homework-item .homework-item__grad {
     font-size: 30px;
-    font-weight: bold; }
+    font-weight: bold;
+    line-height: 35px; }
+    .homeworks .homework-item .homework-item__grad.checking {
+      line-height: 11px; }
     .homeworks .homework-item .homework-item__grad .checking {
       font-family: Ubuntu;
       font-style: italic;
@@ -1380,6 +1400,11 @@ header {
     background-position: bottom;
     background-size: 6px 1px;
     background-repeat: repeat-x; }
+    @media (max-width: 991px) {
+      .teacher-master-group .master-group-item .splitter {
+        margin-left: -16px;
+        margin-right: -16px;
+        width: calc(100% + 32px); } }
   .teacher-master-group .master-group-item .extra-container {
     display: flex;
     align-items: center;
@@ -1433,6 +1458,11 @@ header {
         background-position: bottom;
         background-size: 6px 1px;
         background-repeat: repeat-x; }
+        @media (max-width: 991px) {
+          .students-container .students-row .student-item .splitter {
+            margin-left: -16px;
+            margin-right: -16px;
+            width: calc(100% + 32px); } }
 
 .courses {
   display: flex;
@@ -1477,6 +1507,11 @@ header {
       background-position: bottom;
       background-size: 6px 1px;
       background-repeat: repeat-x; }
+      @media (max-width: 991px) {
+        .checking-homework .checking-homework-item .splitter {
+          margin-left: -16px;
+          margin-right: -16px;
+          width: calc(100% + 32px); } }
     .checking-homework .checking-homework-item .title {
       display: flex;
       align-items: center;
