--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -26,6 +26,9 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 20px;
+  @media(max-width:991px){
+    margin-bottom: 32px;
+  }
   button {
     margin-right: 12px;
     margin-bottom: 12px;
@@ -126,6 +129,7 @@
     }
     @media(max-width: 991px) {
       align-items: center;
+      padding: 18px 16px 17px;
     }
     &:hover {
       background-color: rgba(52, 26, 17, 0.12);
@@ -187,12 +191,16 @@
         width: 497px;
       }
       @media(max-width: 991px) {
-        margin-bottom: 21px;
+        margin-bottom: 16px;
       }
       h2{
         line-height: 25px;
         font-size: 18px;
         font-weight: 500;
+        @media(max-width:991px){
+          font-size: 16px;
+          line-height: 22px;
+        }
       }
       p {
         font-style: normal;
@@ -326,6 +334,9 @@
     transition: all .2s;
     margin-bottom: 18px;
     cursor: pointer;
+    @media(max-width:991px){
+      padding: 18px 16px 20px;
+    }
     &:hover {
       background-color: rgba(52, 26, 17, 0.12);
     }
@@ -333,6 +344,7 @@
       margin-right: auto;
       @media(max-width: 991px) {
         margin-bottom: 22px;
+        width: 100%;
       }
       @media(min-width: 992px) {
         width: 497px;
@@ -342,6 +354,11 @@
         font-weight: 500;
         margin-bottom: 4px;
         font-size: 18px;
+        @media(max-width:991px){
+          font-size: 16px;
+          margin-bottom: 6px;
+          line-height: 22px;
+        }
       }
       .info {
         font-style: normal;
@@ -372,6 +389,10 @@
     .homework-item__grad {
       font-size: 30px;
       font-weight: bold;
+      line-height: 35px;
+      &.checking{
+        line-height: 11px;
+      }
       .checking {
         font-family: Ubuntu;
         font-style: italic;
@@ -1480,6 +1501,11 @@
       background-position: bottom;
       background-size: 6px 1px;
       background-repeat: repeat-x;
+      @media(max-width:991px){
+        margin-left: -16px;
+        margin-right: -16px;
+        width: calc(100% + 32px);
+      }
     }
     .extra-container {
       display: flex;
@@ -1546,6 +1572,11 @@
         background-position: bottom;
         background-size: 6px 1px;
         background-repeat: repeat-x;
+        @media(max-width:991px){
+          margin-left: -16px;
+          margin-right: -16px;
+          width: calc(100% + 32px);
+        }
       }
     }
   }
@@ -1600,6 +1631,11 @@
       background-position: bottom;
       background-size: 6px 1px;
       background-repeat: repeat-x;
+      @media(max-width:991px){
+        margin-left: -16px;
+        margin-right: -16px;
+        width: calc(100% + 32px);
+      }
     }
     .title {
       display: flex;
