--- a/css/build.css
+++ b/css/build.css
@@ -147,6 +147,8 @@ button {
   position: relative;
   display: flex;
   flex-wrap: wrap; }
+  .form-container.w-pswd input {
+    padding-right: 43px; }
   .form-container label {
     height: 17px;
     line-height: 17px;
@@ -178,6 +180,7 @@ button {
     padding-top: 15px;
     padding-bottom: 14px;
     border: 1px solid rgba(0, 0, 0, 0.12);
+    transition: all .2s;
     border-radius: 4px; }
     .form-container input:hover, .form-container textarea:hover {
       border: 1px solid rgba(0, 0, 0, 0.4); }
@@ -200,6 +203,18 @@ button {
     line-height: 18px;
     color: #E20000;
     font-size: 13px; }
+  .form-container__pswdtoggle {
+    position: absolute;
+    top: 37px;
+    right: 14px;
+    cursor: pointer; }
+    .form-container__pswdtoggle img {
+      top: -5px;
+      opacity: .3;
+      position: relative;
+      transition: all .2s; }
+    .form-container__pswdtoggle:hover img {
+      opacity: .7; }
 
 .custom-radio {
   margin-bottom: 12px; }
@@ -1993,3 +2008,52 @@ header {
         line-height: 18px;
         margin-bottom: 3px;
         font-size: 14px; }
+
+.auth {
+  padding-bottom: 120px; }
+  .auth-content {
+    text-align: center; }
+  .auth .logo-container {
+    width: 192px;
+    height: 48px;
+    margin: auto;
+    margin-bottom: 48px;
+    margin-top: 40px; }
+  .auth-title {
+    font-style: normal;
+    font-weight: bold;
+    line-height: 33px;
+    font-size: 28px;
+    margin-bottom: 40px;
+    text-align: center; }
+  .auth .form-container {
+    margin-bottom: 19px; }
+    .auth .form-container:last-of-type {
+      margin-bottom: 31px; }
+    .auth .form-container label {
+      text-align: left; }
+    .auth .form-container .link {
+      font-style: normal;
+      font-weight: normal;
+      line-height: normal;
+      font-size: 14px;
+      color: #252525;
+      position: absolute;
+      top: 0;
+      transition: all .2s;
+      right: 0; }
+      .auth .form-container .link:hover {
+        color: #F19137; }
+  .auth .button {
+    height: 48px;
+    margin-bottom: 32px; }
+  .auth-link {
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 14px;
+    color: #252525;
+    text-align: center;
+    transition: all .2s; }
+    .auth-link:hover {
+      color: #F19137; }
