--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -5,6 +5,11 @@
   //height: 69px;
   display: flex;
   flex-wrap: wrap;
+  &.w-pswd{
+    input{
+      padding-right: 43px;
+    }
+  }
   label {
     height: 17px;
     line-height: 17px;
@@ -39,6 +44,7 @@
     padding-top: 15px;
     padding-bottom: 14px;
     border: 1px solid rgba(0, 0, 0, 0.12);
+    transition: all .2s;
     border-radius: 4px;
     &:hover {
       border: 1px solid rgba(0, 0, 0, 0.4);
@@ -68,6 +74,24 @@
     line-height: 18px;
     color: #E20000;
     font-size: 13px;
+  }
+
+  &__pswdtoggle{
+    position: absolute;
+    top: 37px;
+    right: 14px;
+    cursor: pointer;
+    img{
+      top: -5px;
+      opacity: .3;
+      position: relative;
+      transition: all .2s;
+    }
+    &:hover{
+      img{
+        opacity: .7;
+      }
+    }
   }
 }
 
